; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-bufio.c_bio_complete.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-bufio.c_bio_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bio = type { i32, %struct.dm_buffer* }
%struct.dm_buffer = type { i32 (%struct.dm_buffer*, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bio*)* @bio_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bio_complete(%struct.bio* %0) #0 {
  %2 = alloca %struct.bio*, align 8
  %3 = alloca %struct.dm_buffer*, align 8
  %4 = alloca i32, align 4
  store %struct.bio* %0, %struct.bio** %2, align 8
  %5 = load %struct.bio*, %struct.bio** %2, align 8
  %6 = getelementptr inbounds %struct.bio, %struct.bio* %5, i32 0, i32 1
  %7 = load %struct.dm_buffer*, %struct.dm_buffer** %6, align 8
  store %struct.dm_buffer* %7, %struct.dm_buffer** %3, align 8
  %8 = load %struct.bio*, %struct.bio** %2, align 8
  %9 = getelementptr inbounds %struct.bio, %struct.bio* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  store i32 %10, i32* %4, align 4
  %11 = load %struct.bio*, %struct.bio** %2, align 8
  %12 = call i32 @bio_put(%struct.bio* %11)
  %13 = load %struct.dm_buffer*, %struct.dm_buffer** %3, align 8
  %14 = getelementptr inbounds %struct.dm_buffer, %struct.dm_buffer* %13, i32 0, i32 0
  %15 = load i32 (%struct.dm_buffer*, i32)*, i32 (%struct.dm_buffer*, i32)** %14, align 8
  %16 = load %struct.dm_buffer*, %struct.dm_buffer** %3, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i32 %15(%struct.dm_buffer* %16, i32 %17)
  ret void
}

declare dso_local i32 @bio_put(%struct.bio*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
